include/C/jdmath.h

MATRIX JDCALL MatPartAcf(MATRIX mPartAcf, MATRIX mAcf, int cAcf, MATRIX mY, int cY, double *pdLogDet, BOOL bFilter);
MATRIX JDCALL MatAB(MATRIX, int, int, MATRIX, int, MATRIX);
MATRIX JDCALL MatABt(MATRIX, int, int, MATRIX, int, MATRIX);
MATRIX JDCALL MatAtB(MATRIX, int, int, MATRIX, int, MATRIX);
MATRIX JDCALL MatAdd(MATRIX mA, int cM, int cN, MATRIX mB, double dFac, MATRIX mAplusB);
MATRIX JDCALL MatCopyTranspose(MATRIX mB, MATRIX mA, int cM, int cN);
MATRIX JDCALL MatReflect(MATRIX, int);
MATRIX JDCALL MatTranspose(MATRIX, int);
MATRIX JDCALL MatBSBt(MATRIX, int, MATRIX, int, MATRIX);
MATRIX JDCALL MatBtSB(MATRIX, int, MATRIX, int, MATRIX);
MATRIX JDCALL MatBtB(MATRIX mB, int rB, int cB, MATRIX mBtB);
MATRIX JDCALL MatBtBVec(MATRIX mB, int cT, int cB, VECTOR vY, MATRIX mBtB);
MATRIX JDCALL MatBBt(MATRIX mB, int rB, int cB, MATRIX mBBt);
int    JDCALL ILDLbandDec(MATRIX, VECTOR, int, int);
void   JDCALL LDLbandSolve(MATRIX, VECTOR, VECTOR, VECTOR, int, int);
/* mtchol.h */
int    JDCALL ILDLdec(MATRIX, VECTOR, int);
BOOL   JDCALL FPPtDec(MATRIX, int);
void   JDCALL LDLsolve(MATRIX, VECTOR, VECTOR, VECTOR, int );
void   JDCALL LDLsolveInv(MATRIX mLDLt, MATRIX mAinv, int cA);
int    JDCALL ISymInv(MATRIX, int);
int    JDCALL ISymInvDet(MATRIX mA, int cA, double *pdLogDet);
int    JDCALL ILUPlogdet(MATRIX mU, int cA, int *piPiv, double dNormEps, double *pdLogDet);
int    JDCALL ILUPdec(MATRIX mA, int cA, int *piPiv, double *pdLogDet,
              int *piSignDet, MATRIX mUt);
void   JDCALL LUPsolve(MATRIX mL, MATRIX mU, int *piPiv, VECTOR vB, int cA);
void   JDCALL LUPsolveInv(MATRIX mL, MATRIX mU, int *piPiv, MATRIX mAinv, int cA);
int    JDCALL IInvert(MATRIX, int);
int    JDCALL IInvDet(MATRIX mA, int cA, double *pdLogDet, int *piSignDet);
/* mteigsym.c */
int    JDCALL IEigenSym(MATRIX mA, int cA, VECTOR vEval, int fDoVectors);
int    JDCALL IEigValSym(MATRIX, VECTOR, int);
int    JDCALL IEigVecSym(MATRIX, VECTOR, int);
int    JDCALL IGenEigVecSym(MATRIX, MATRIX, VECTOR, VECTOR, int);
int    JDCALL IEigValPoly(VECTOR vPoly, VECTOR evr, VECTOR evi, int dim);
int    JDCALL IEigValReal(MATRIX, VECTOR, VECTOR, int);
/* mteigvec.c */
int    JDCALL IEigen(MATRIX mA, int cA, VECTOR vRe, VECTOR vIm, MATRIX mEvec);
int    JDCALL IEigVecReal(MATRIX, VECTOR, VECTOR, int);
MATRIX JDCALL MatRan(MATRIX, int, int);
MATRIX JDCALL MatRann(MATRIX mA, int cR, int cC);
int    JDCALL IRanBinomial(int, double);
int    JDCALL IRanLogarithmic(double dA);
int    JDCALL IRanNegBin(int iN, double dP);
int    JDCALL IRanPoisson(double);
/* mtstats.c */
BOOL   JDCALL FGetAcf(VECTOR vX, int cT, int cLag, VECTOR vAcf);
int    JDCALL IGetAcf(VECTOR, int, int, VECTOR, BOOL bCov);
BOOL   JDCALL FGetAcfRun(VECTOR, int, int, VECTOR);
MATRIX JDCALL MatAcf(MATRIX mAcf, MATRIX mX, int cT, int cX, int mxLag);
MATRIX JDCALL MatVariance(MATRIX mXtX, MATRIX mX, int cT, int cX, BOOL fCorr);
MATRIX JDCALL MatStandardize(MATRIX mXdest, MATRIX mX, int cT, int cX);
BOOL   JDCALL FPeriodogram(VECTOR vX, int cT, int iTrunc, int cS, VECTOR vS, int iMode);
BOOL   JDCALL FPeriodogramAcf(VECTOR vAcf, int cT, int iTrunc, int cS, VECTOR vS, int iMode, int cTwin);
void   JDCALL OlsQRacc(MATRIX mXt, int cX, int cT, int *piPiv, int cR, VECTOR vTau,
			MATRIX mYt, int cY,	MATRIX mB, MATRIX mXtXinv, MATRIX mXtX);
int    JDCALL IOlsQR(MATRIX mXt, int cX, int cT, MATRIX mYt, int cY,
            MATRIX mB, MATRIX mXtXinv, MATRIX mXtX, VECTOR vW);
int    JDCALL IOlsNorm(MATRIX mXt, int cX, int cT, MATRIX mYt, int cY, 
			MATRIX mB, MATRIX mXtXinv, MATRIX mXtX, BOOL fInRows);
int	   JDCALL IDecQRtRank(MATRIX mXt, int cX, int cT, int *pcR);
int    JDCALL IDecQRtEx(MATRIX mXt, int cX, int cT, int *piPiv, VECTOR vTau);
int    JDCALL IDecQRt(MATRIX mXt, int cX, int cT, int *piPiv, int *pcR);
/* mtsvd.c */
int    JDCALL IDecSVD(MATRIX mA, int cM, int cN, VECTOR vW, int fDoU, MATRIX mU,
    		int fDoV, MATRIX mV, int fSort);
int    JDCALL ISVDdec(MATRIX, int, int, VECTOR, BOOL, MATRIX, BOOL, MATRIX, VECTOR, BOOL);
int    JDCALL INullSpace(MATRIX, int, int, BOOL);
MATRIX JDCALL MatGenInvert(MATRIX mA, int cM, int cN, MATRIX mRes, VECTOR vSval);
int	   JDCALL IMatRank(MATRIX mA, int cM, int cN, double dEps, BOOL bAbsolute);