include/C/ox/oxexport.h

void	OXCALL	OxFnDouble(OxVALUE *rtn, OxVALUE *pv, double (OXCALL * fn)(double) );
void	OXCALL	OxFnDouble2(OxVALUE *rtn, OxVALUE *pv, double (OXCALL * fn)(double,double) );
void	OXCALL	OxFnDouble3(OxVALUE *rtn, OxVALUE *pv, double (OXCALL * fn)(double,double,double) );
void	OXCALL	OxFnDouble4(OxVALUE *rtn, OxVALUE *pv, double (OXCALL * fn)(double,double,double,double) );
void	OXCALL	OxFnDoubleInt(OxVALUE *rtn, OxVALUE *pv, double (OXCALL * fn)(double,int) );
void 	OXCALL 	OxFnDoubleVec(OxVALUE *rtn, OxVALUE *pv, double (OXCALL * fn)(double), int iVecAt);
void 	OXCALL 	OxFnDouble2Vec(OxVALUE *rtn, OxVALUE *pv, double (OXCALL * fn)(double,double), int iVecAt);
void 	OXCALL 	OxFnDouble3Vec(OxVALUE *rtn, OxVALUE *pv, double (OXCALL * fn)(double,double,double), int iVecAt);
void	OXCALL	OxRunMainExitCall(void (OXCALL * fn)(void));
void	OXCALL	SetOxExit(void (OXCALL * pfnNewOxExit)(int) );