include/C/ox/Ox.cs

	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 FGetAcf(double[] vX, Int32 cT, Int32 cLag, double[] vAcf);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 FGetAcfRun(double[] vX, Int32 cT, Int32 cLag, double[] vAcf);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 FIsInf(double d);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 FIsNaN(double d);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 FPeriodogram(double[] vX, Int32 cT, Int32 iTrunc, Int32 cS, double[] vS, Int32 iMode);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 FPeriodogramAcf(double[] vAcf, Int32 cT, Int32 iTrunc, Int32 cS1, double[] vS, Int32 iMode, Int32 cTwin);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern object FPPtDec(IntPtr mA, Int32 cA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 IDecQRt(IntPtr mXt, Int32 cX, Int32 cT, ref Int32 piPiv, ref Int32 pcR);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 IDecQRtEx(IntPtr mXt, Int32 cX, Int32 cT, ref Int32 piPiv, double[] vTau);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 IDecQRtRank(IntPtr mXt, Int32 cX, Int32 cT, ref Int32 pcR);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 IDecSVD(IntPtr mA, Int32 cM, Int32 cN, double[] vW, Int32 fDoU, IntPtr mU, Int32 fDoV, IntPtr mV, Int32 fSort);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 IEigen(IntPtr mA, Int32 cA, double[] vEr, double[] vEi, IntPtr mmE);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 IEigenSym(IntPtr mA, Int32 cA, double[] vEval, Int32 fDoVectors);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 IEigValPoly(double[] vPoly, double[] vEr, double[] vEi, Int32 cA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 IEigValReal(IntPtr mA, double[] vEr, double[] vEi, Int32 cA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 IEigValSym(IntPtr mA, double[] vEv, Int32 cA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 IEigVecReal(IntPtr mA, double[] vEr, double[] vEi, Int32 cA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 IEigVecSym(IntPtr mA, double[] vEv, Int32 cA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 IGenEigVecSym(IntPtr mA, IntPtr mB, double[] vEval, double[] vSubd, Int32 cA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 IGetAcf(double[] vX, Int32 cT, Int32 cLag, double[] vAcf, Int32 bCov);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 IInvDet(IntPtr mA, Int32 cA, ref double pdLogDet, ref Int32 piSignDet);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 IInvert(IntPtr mA, Int32 cA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 ILDLbandDec(IntPtr mA, double[] vD, Int32 cB, Int32 cA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 ILDLdec(IntPtr mA, double[] vD, Int32 cA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 ILUPdec(IntPtr mA, Int32 cA, ref Int32 piPiv, ref double pdLogDet, ref Int32 piSignDet, IntPtr mUt);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 ILUPlogdet(IntPtr mU, Int32 cA, ref Int32 piPiv, double dNormEps, ref double pdLogDet);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 IMatRank(IntPtr mA, Int32 cM, Int32 cN, double dEps, Int32 bAbsolute);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern IntPtr IntMatAllocBlock(Int32 cR, Int32 cC);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void IntMatFreeBlock(IntPtr m);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 INullSpace(IntPtr mA, Int32 cM, Int32 cN, Int32 fAppend);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 IOlsNorm(IntPtr mXt, Int32 cX, Int32 cT, IntPtr mYt, Int32 cY, IntPtr mB, IntPtr mXtXinv, IntPtr mXtX, Int32 fInRows);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 IOlsQR(IntPtr mXt, Int32 cX, Int32 cT, IntPtr mYt, Int32 cY, IntPtr mB, IntPtr mXtXinv, IntPtr mXtX, ref Int32 vW);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 IRanBinomial(Int32 n, double p);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 IRanLogarithmic(double dA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 IRanNegBin(Int32 iiN, double dP);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 IRanPoisson(double dMu);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 ISVDdec(IntPtr mA, Int32 cM, Int32 cN, double[] vW, Int32 fDoU, IntPtr mU, Int32 fDoV, IntPtr mV, double[] v_1, Int32 fSort);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 ISymInv(IntPtr mA, Int32 cA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 ISymInvDet(IntPtr mA, Int32 cA, ref double pdLogDet);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void LDLbandSolve(IntPtr mL, double[] vD, double[] vX, double[] vB, Int32 cB, Int32 cA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void LDLsolve(IntPtr mL, double[] vD, double[] vX, double[] vB, Int32 cA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void LDLsolveInv(IntPtr mLDLt, IntPtr mAinv, Int32 cA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void LUPsolve(IntPtr mL, IntPtr mU, ref Int32 piPiv, double[] vB, Int32 cA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void LUPsolveInv(IntPtr mL, IntPtr mU, ref Int32 piPiv, IntPtr mAinv, Int32 cA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 MatAB(IntPtr mA, Int32 cA, Int32 cC, IntPtr mB, Int32 cB, IntPtr mAB);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 MatABt(IntPtr mA, Int32 cA, Int32 cC, IntPtr mB, Int32 cB, IntPtr mABt);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 MatAcf(IntPtr mAcf, IntPtr mX, Int32 cT, Int32 cX, Int32 mxLag);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 MatAdd(IntPtr mA, Int32 cM, Int32 cN, IntPtr mB, double dFac, IntPtr mAplusB);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern IntPtr MatAllocBlock(Int32 cR, Int32 cC);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 MatAtB(IntPtr mA, Int32 cA, Int32 cC, IntPtr mB, Int32 cB, IntPtr mAtB);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 MatBBt(IntPtr mB, Int32 cB, Int32 cS, IntPtr mBBt);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 MatBSBt(IntPtr mB, Int32 cB, IntPtr mS, Int32 cS, IntPtr mBSBt);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 MatBtB(IntPtr mB, Int32 cB, Int32 cS, Int32 mBtB);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 MatBtBVec(IntPtr mB, Int32 cB, Int32 cS, double[] vY, IntPtr mBtB);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 MatBtSB(IntPtr mB, Int32 cB, IntPtr mS, Int32 cS, IntPtr mBtSB);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 MatCopy(IntPtr mDest, IntPtr mSrc, Int32 cM, Int32 cN);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 MatCopyTranspose(IntPtr mDestT, IntPtr mSrc, Int32 cM, Int32 cN);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void MatCopyVecc(IntPtr mDest, double[] vSrc_c, Int32 cM, Int32 cN);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void MatCopyVecr(IntPtr mDest, double[] vSrc_r, Int32 cM, Int32 cN);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 MatDup(IntPtr mSrc, Int32 cM, Int32 cN);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void MatFreeBlock(IntPtr m);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 MatGenInvert(IntPtr mA, Int32 cM, Int32 cN, IntPtr mRes, double[] vSval);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double MatGetAt(IntPtr mSrc, Int32 i, Int32 j);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 MatI(IntPtr mDest, Int32 cM);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 MatNaN(IntPtr mDest, Int32 cM, Int32 cN);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 MatPartAcf(IntPtr mPartAcf, IntPtr mAcf, Int32 cAcf, IntPtr mY, Int32 cY, ref double pdLogDet, Int32 bFilter);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 MatRan(IntPtr mA, Int32 cR, Int32 cC);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 MatRann(IntPtr mA, Int32 cR, Int32 cC);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 MatReflect(IntPtr mA, Int32 cA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void MatSetAt(IntPtr mDest, double d, Int32 i, Int32 j);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 MatStandardize(IntPtr mXdest, IntPtr mX, Int32 cT, Int32 cX);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 MatTranspose(IntPtr mA, Int32 cA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 MatVariance(IntPtr mXtX, IntPtr mX, Int32 cT, Int32 cX, Int32 fCorr);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 MatZero(IntPtr mDest, Int32 cM, Int32 cN);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OlsQRacc(IntPtr mXt, Int32 cX, Int32 cT, Int32[] piPiv, Int32 cR, double[] vTau, IntPtr mYt, Int32 cY, IntPtr mB, IntPtr mXtXinv,
	IntPtr mXtX);
